fixed up spacing above content section, less of a gap on multiple pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -521,7 +521,7 @@ a.Onslow:hover, a.Fergusson:focus {
       padding-top: 135px}
 
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
     .howtoplaytext-section {
         padding: 100px;
